fix: dark mode sganciamento da lista richieste

--- a/src/frontend/launcherComponent/src/styles.scss
+++ b/src/frontend/launcherComponent/src/styles.scss
@@ -181,6 +181,10 @@ $SO-card-shadow-secondary-soft: 0 0 4px 2px #868e96;
   background-color: $SO-white $SO-i;
   color: $SO-black $SO-i;
 
+  .mezzo-sganciamento:hover {
+    background-color: #e2e2e2 $SO-i;
+  }
+
   .bg-whitesmoke {
     background: whitesmoke $SO-i;
   }
@@ -279,6 +283,10 @@ $SO-card-shadow-secondary-soft: 0 0 4px 2px #868e96;
     text {
       fill: $SO-white $SO-i;
     }
+  }
+
+  .mezzo-sganciamento:hover {
+    background-color: $SO-dark-light $SO-i;
   }
 
   .card-header {
